#57967 - updated modals for mobile, bugfix alignment

--- a/Magento_Ui/styles/modules/_modals.scss
+++ b/Magento_Ui/styles/modules/_modals.scss
@@ -6,8 +6,8 @@ $modal-popup__padding-top                       : 42px !default;
 $modal-popup__width                             : 75% !default;
 $modal-popup__z-index                           : $z-index-high !default;
 $modal-popup-confirm__z-index                   : $z-index-highest !default;
-
-$modal-slide__indent-left                       : 72px !default;
+$modal-slide__indent-left                       : 0 !default;
+$modal-slide__indent-left\@medium               : 72px !default;
 $modal-slide__padding                           : 41px !default;
 $modal-slide__z-index                           : $z-index-high !default;
 $modal-slide-header__padding-vertical           : 33px !default;
@@ -43,6 +43,10 @@ $modal-slide-header__padding-vertical           : 33px !default;
 @mixin lib-modal-slide() {
     left: $modal-slide__indent-left;
     z-index: $modal-slide__z-index;
+
+    @include mq($screen-m) {
+        left: $modal-slide__indent-left\@medium;
+    }
 
     &._show {
         .modal-inner-wrap {
