--- a/Magento_Ui/styles/modules/_modals_extend.scss
+++ b/Magento_Ui/styles/modules/_modals_extend.scss
@@ -131,7 +131,7 @@ body {
     }
 }
 
-@include mq($max-screen: $screen-m) {
+@include mq($max-screen: $screen-m - 1) {
     .custom-slide {
         @include lib-modal();
         @include lib-modal-slide();
